<resources>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="es_addSupplier">Añadir</string>
    <string name="es_orders">Pedidos</string>
    <string name="es_products">Productos</string>
    <string name="es_suppliers">Provedores</string>
    <string name="es_supplierOptionsOrdersButton">Pedidos</string>
    <string name="es_supplierOptionsProductsButton">Productos</string>
    <string name="es_supplierProductOptionsGraphic">Gráfica</string>
    <string name="es_productNewName">Nombre:</string>
    <string name="es_productNewCancel">Cancelar</string>
    <string name="es_productNewAccept">Aceptar</string>
    <string name="es_productNewPrice">Precio:</string>
    <string name="es_productNewSupplier">Provedor:</string>
    <string name="es_productNewProduct">Nuevo Producto</string>
    <string name="es_supplierOptionsNewButton">Nuevo producto</string>
    <string name="es_supplierNewName">Nombre:</string>
    <string name="es_NewCancel">Cancelar</string>
    <string name="es_NewAccept">Crear</string>
    <string name="es_supplierNewPhonenumber">Teléfono:</string>
    <string name="es_suppliersOptionsNew">Nuevo proveedor</string>
    <string name="es_suppliersOptionsList">Proveedores</string>
    <string name="es_ordersGeneralPreorderButton">Pre-pedidos</string>
    <string name="es_ordersGeneralOrderButton">Pedidos</string>
    <string name="es_preorderOptionsNewButton">Nuevo pedido</string>
    <string name="es_preorderOptionsListButton">Lista</string>
    <string name="es_preorderNewSupplier">Proveedor:</string>
    <string name="es_preorderNewProduct">Producto:</string>
    <string name="es_preorderNewAddProductButton">Añadir</string>
    <string name="es_supplierProductOptionsEdit">Editar</string>
    <string name="es_supplierProductOptionsUpdate">Actualizar</string>
    <string name="es_supplierOptionsEditButton">Editar</string>
    <string name="es_UpdateAccept">Actualizar</string>
    <string name="es_preordersTitle">Prepedidos</string>
    <string name="action_settings">Settings</string>
    <string name="es_action_createPreorder">Crear pre-pedido</string>
    <string name="es_toolbar_firstOption">Primera opción</string>
    <string name="es_toolbar_createPreorder">Hacer pre-pedido</string>
    <string name="es_suppliersTitle">Proveedores</string>
    <string name="es_toolbar_createSupplier">Nuevo proveedor</string>
    <string name="es_toolbar_closePreorder">Cerrar pre-pedido</string>
    <string name="es_toast_database_error">Error al introducir los datos</string>
    <string name="es_emptyOrWhitespace">Algún campo está vacío o con espacios.</string>
    <string name="es_toolbar_preorder_addProducts">Añadir productos</string>
    <string name="es_confirmButton">Confirmar</string>
    <string name="es_deletePreorderItem">Eliminar producto</string>
    <string name="es_orderListTotalText">Total:</string>
    <string name="es_delete">Eliminar</string>
    <string name="es_productAdded">Producto añadido</string>
    <string name="es_sendMail">Enviar pedido</string>
    <string name="es_email">Correo electrónico:</string>
    <string name="es_update">Actualizar</string>
</resources>
