<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.app.activities.supplier.com.app.supplier.product.SupplierProductOptionsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/supplierProductOptionsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/supplierProductOptionsUpdate"
        android:text="@string/es_supplierProductOptionsUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/supplierProductOptionsEdit"
        android:text="@string/es_supplierProductOptionsEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/supplierProductOptionsGraphic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/es_supplierProductOptionsGraphic"
        android:layout_weight="1"/>

</LinearLayout>